# slang-rhi

./: .clangd  .gitignore  .mcvm  CMakeLists.txt
include/: slang-rhi.h  slang-user-config.h
mcvm/: .gitignore  CMakeLists.txt  mcvm.cmake
src/: rhi.cpp
src/core/: arena-allocator.h  platform.cpp
src/wgpu/: wgpu-api.cpp  wgpu-api.h  wgpu-buffer.cpp  wgpu-command.cpp  wgpu-device.cpp  wgpu-shader-program.cpp  wgpu-surface.cpp  wgpu-utils.h
